@@ -10,6 +10,9 @@ Changelog
 - Raise compilation and execution errors
   [ebrehault]
 
+- Support callable layout
+  [ebrehault]
+
 
 1.0.4 (2016-03-02)
 ------------------
